--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-slick": "^0.29.0",
     "react-toastify": "^9.0.1",
     "react-use-scroll-direction": "^0.1.0",
+    "sharp": "^0.30.7",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
