--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@chakra-ui/react": "^1.8.8",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@fortawesome/fontawesome-svg-core": "^6.1.2",
+    "@fortawesome/free-solid-svg-icons": "^6.1.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "aos": "^2.3.4",
     "axios": "^0.27.2",
     "framer-motion": "^6.3.3",
