--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tailwindcss/line-clamp": "^0.4.2",
     "aos": "^2.3.4",
     "axios": "^0.27.2",
+    "formidable": "^2.1.1",
     "framer-motion": "^6.3.3",
     "hamburger-react": "^2.5.0",
     "html-react-parser": "^1.4.12",
