--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
     "react-use-scroll-direction": "^0.1.0",
     "sharp": "^0.30.7",
     "slick-carousel": "^1.8.1",
-    "stripe": "^11.14.0",
-    "formidable": "^2.1.1"
+    "stripe": "^11.14.0"
+  
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
